--- a/final/home.css
+++ b/final/home.css
@@ -2,7 +2,7 @@ html,body {
 	height: 100%;
 	margin: 0;
 	padding: 0;
-	background: url("   dr or health pic?????   ") no-repeat center top;
+	background: url("mountains.jpg") no-repeat center top;
 }
 
 #wrap {
@@ -15,7 +15,7 @@ header{
 }
 
 nav{
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0,0,0,0.3);
     padding: 0.5em;
     text-align:center; 
     font-size: 18px;
@@ -23,33 +23,19 @@ nav{
 
 nav li {
     display: inline; 
-    padding: 13px;
     color: white;
-    font-family: 'Patua One', fantasy;
+    font-family: 'Artifika', serif;
+    padding: inherit;
 }
+
 
 nav li a{
     text-decoration: none;
     color: white;
 }
 
-.button{
-    background-color: forestgreen;
-    color: white;
-    text-decoration: underline;
-    padding: 15px;
-    border-radius: 10px;
-    margin: 20px 0px;
-    display: table-cell;
-    background-position: center;  
-}
-
-a.button:hover{
-    background-color: black;
-}
-
 section{
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0,0,0,0.3);
     padding: 1em;
     margin: 1em;
     color: white;
@@ -61,6 +47,6 @@ H1, p, li{
 
 footer{
     text-align: center;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0,0,0,0.3);
     color: white;
 }
